--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,14 +28,22 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^9.0.1
+  build_runner: ^2.4.13
   cupertino_icons: ^1.0.8
+  firebase_auth: ^6.1.0
   firebase_core: ^4.1.1
   fl_chart: ^1.1.1
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.1
   flutter_localization: ^0.3.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
   line_chart: ^1.1.11
   pie_chart: ^5.4.0
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
