--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   bloc: ^9.0.1
   build_runner: ^2.4.13
+  cloud_firestore: ^6.0.2
   cupertino_icons: ^1.0.8
   firebase_auth: ^6.1.0
   firebase_core: ^4.1.1
@@ -38,11 +39,14 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.1
   flutter_localization: ^0.3.3
+  google_fonts: ^6.3.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
   line_chart: ^1.1.11
+  pdf: ^3.11.3
   pie_chart: ^5.4.0
+  printing: ^5.14.2
   provider: ^6.1.5+1
 
 dev_dependencies:
@@ -61,7 +65,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -72,10 +76,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: cairo
+      fonts:
+        - asset: assets/fonts/cairo-2/Cairo-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
